# funwithboostjson

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
src/lib/: Album.hpp  Band.cpp  Band.hpp  Member.hpp
src/test/: BandTest.cpp
src/test/resources/: example.json
